# qa_guru_diplom_for_api

./: README.md  config.py  example_env  pyproject.toml
framework/: DemoQaWithEnv.py
tests/: __init__.py  conftest.py
tests/reqres_in/: test_create_user.py  test_get_list_users.py  test_update_info_about_user.py
tests/ui_plus_api/: test_for_login.py  test_for_profile.py  test_for_search.py  test_for_setting.py
